--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">USA Presidents List</string>
+    <string name="app_name">USA President list</string>
+    <string name="president_name">President name</string>
+    <string name="description">Description</string>
+    <string name="todo">TODO</string>
 </resources>
